<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/app_background"
    android:padding="24dp"
    tools:context=".MainActivity">

    <!-- Card 1 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/results_background"
            android:gravity="center"
            android:layoutDirection="locale"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/salario_bruto_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/baseline_account_balance_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/salario_bruto_result_card"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/salario_bruto_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="32sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Card 2 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="12dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/results_background"
            android:gravity="center"
            android:layoutDirection="locale"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/salario_neto_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/baseline_attach_money_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/salario_neto_result_card"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/salario_neto_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="32sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!-- Card 3 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/results_background"
            android:gravity="center"
            android:layoutDirection="locale"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/retencion_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/money_bag_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/retencion_result_card"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/retencion_irpf_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="32sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Card 4 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="12dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/results_background"
            android:gravity="center"
            android:layoutDirection="locale"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/deducciones_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/point_of_sale_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/deducciones_result_card"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/deducciones_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="32sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>